[package]
name = "vpm"
version = "0.1.1"
edition = "2021"
license = "MIT"
copyright = "Copyright (c) 2024 Instachip"
authors = ["Instachip <team@getinstachip.com>"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
anyhow = "1.0.86"
tree-sitter = "0.20.6"
tree-sitter-verilog = { git = "https://github.com/tree-sitter/tree-sitter-verilog" }
regex = "1.10.6"
toml = "0.8.19"
serde = "1.0.205"
clust = "0.9.0"
dotenv = "0.15.0"
tokio = { version = "1.39.2", features = ["full"] }

[build-dependencies]
cc="*"
