[package]
name = "vpm"
version = "0.1.7"
edition = "2021"
license = "MIT"
copyright = "Copyright (c) 2024 Instachip"
authors = ["Instachip <team@getinstachip.com>"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
anyhow = "1.0.86"
tree-sitter = "0.20.6"
tree-sitter-verilog = { git = "https://github.com/tree-sitter/tree-sitter-verilog" }
regex = "1.10.6"
tokio = { version = "1.39.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.125"
walkdir = "2.5.0"
once_cell = "1.19.0"

[build-dependencies]
cc="*"
