[package]
name = "vpm"
version = "0.2.6"
edition = "2021"
license = "MIT"
copyright = "Copyright (c) 2024 Instachip"
authors = ["Instachip <team@getinstachip.com>"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.208", features = ["derive"] }
tree-sitter-verilog = { git = "https://github.com/tree-sitter/tree-sitter-verilog" }
tree-sitter = "0.20.6"
anyhow = "1.0.86"
regex = "1.10.6"
serde_json = "1.0.125"
walkdir = "2.5.0"
once_cell = "1.19.0"
tempfile = "3.12.0"
toml = "0.8.19"
cargo-lock = "9.0.0"
fastrand = "2.1.1"
dialoguer = "0.11.0"
fuzzy-matcher = "0.3.7"
indicatif = "0.17.8"

[build-dependencies]
cc="*"
